--- a/src/app/pomodoro/pomodoro.html
+++ b/src/app/pomodoro/pomodoro.html
@@ -1,6 +1,6 @@
 <div class="pomodoro">
   <h2>Welcome to my Pomodoro Clock</h2>
   <app-mode-selection (modeSelected)="setMode($event)"></app-mode-selection>
-  <app-timer></app-timer>
+  <app-timer [currentmode]="currentmode"></app-timer>
   <app-buttons></app-buttons>
 </div>
