--- a/src/app/pomodoro/pomodoro.html
+++ b/src/app/pomodoro/pomodoro.html
@@ -1,5 +1,5 @@
 <div class="pomodoro">
-  <h2>Welcome to my Pomodoro Clock</h2>
+  <h2>25+5 Clock</h2>
   <app-mode-selection (modeSelected)="setMode($event)"></app-mode-selection>
   <app-timer [currentmode]="currentmode"></app-timer>
   <app-buttons></app-buttons>
