the second version of my pomodoro app

--- a/src/app/mode-selection/mode-selection.css
+++ b/src/app/mode-selection/mode-selection.css
@@ -1,4 +1,4 @@
-.buttons button {
+.controls button {
   padding: 10px 20px;
   margin: 0 10px;
   font-size: 1rem;
@@ -9,7 +9,17 @@
   cursor: pointer;
 }
 
-.buttons .active {
+.controls button:hover {
   background: white;
   color: rebeccapurple;
+}
+
+.session {
+  display: flex;
+  justify-content: center
+}
+
+.controls {
+  padding: 1em;
+
 }
