Revert "the second version of my pomodoro app"
This reverts commit c14e7e50a9a7ba4caabd7ff64c32ea9100ef62c4.

--- a/src/app/mode-selection/mode-selection.css
+++ b/src/app/mode-selection/mode-selection.css
@@ -1,4 +1,4 @@
-.controls button {
+.buttons button {
   padding: 10px 20px;
   margin: 0 10px;
   font-size: 1rem;
@@ -9,17 +9,7 @@
   cursor: pointer;
 }
 
-.controls button:hover {
+.buttons .active {
   background: white;
   color: rebeccapurple;
-}
-
-.session {
-  display: flex;
-  justify-content: center
-}
-
-.controls {
-  padding: 1em;
-
 }
