--- a/src/app/buttons/buttons.html
+++ b/src/app/buttons/buttons.html
@@ -2,4 +2,5 @@
   <button (click)="start()">Start</button>
   <button (click)="reset()">Reset</button>
   <button (click)="stop()">Stop</button>
+  <button (click)="muteMusic()">Mute/Unmute Music</button>
 </div>
